# voxelquest

./: CMakeCache.txt  CMakeLists.txt  GLSLFragmentLighting.sln  GLSLFragmentLighting.sln - Shortcut.lnk  Makefile  cleanup.bat  cmake_install.cmake  combine.bat  copysource.bat  debug_cleanup.bat  mergefiles.sh  test.js  voxelquest
CompiledSource/: CMakeListsOLD.txt  Makefile  cmake_install.cmake  main.cpp
VoxelQuest/: VoxelQuest.vcxproj  VoxelQuest.vcxproj.filters
compiled/: main.cpp
data/: E_SDT_OBJECTDATA  E_SDT_SHADERPARAMS  E_SDT_STATDATA  E_SDT_STATUSDATA  constants.js  kb.js  lastImageBuffer.txt  lastJSONBuffer.js  lastJSONBuffer.txt  lastJSONBufferGUI.js  materials.js  materialsBackup.js  poseinfo.js  primTemplates.js  shaderParams  temp.txt
deprecated/: oldmain.cpp  res.h
docs/: notes.txt  todo.txt
lua/: lua52.lib
shaders/: CalcFlow.c  DLA.c  GenerateVolume.c  RenderVolume.c  ShaderLighting.c  ShaderTarg2.c  Simplex2D.c
src/: f_0010_includes.cpp  f_0012_vectors.cpp  f_0013_enums.cpp  f_0015_helperfuncs.cpp  f_0017_helperclasses.cpp  f_0030_network.cpp  f_0050_imageloader.cpp  f_0052_singleton.cpp  f_0055_predefs.cpp  f_0056_fpage3d.cpp  f_0057_fpagemanager.cpp  f_0058_gameui.cpp  f_0060_main.cpp
temp/: f00020_includes.h  f00022_enums.h  f00024_mat.h  f00025_includes.h  f00025_ivec.h  f00026_enums.h  f00026_vectors.h  f00027_mat.h  f00027_vectors.h  f00028_gameent.h  f00028_vectors.h  f00029_gameent.h  f00030_json.h  f00040_png.h  f00050_enums.h  f00215_helperfuncs.h  f00217_helperclasses.h  f00220_timer.h  f00230_network.h  f00240_simplex.h  (+91 more)
(+387 files in other folders)
